<resources>
    <string name="build" translatable="false">26.05.2024</string>
    <string name="app_name" translatable="false">Pro Math EGE</string>
    <string name="github" translatable="false">https://github.com/Shwerch/ProMathEGE</string>
    <string name="trushin" translatable="false">https://www.youtube.com/@trushinbv</string>
    <string name="bookege" translatable="false">https://trushinbv.ru/book.ege</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="theory">Theory</string>
    <string name="practice">Practice</string>
    <string name="shop">Shop</string>
    <string name="back">Back</string>
    <string name="main_menu">Main menu</string>
    <string name="points">Points</string>
    <string name="start_test">Start test</string>
    <string name="next">Next</string>
    <string name="check">Answer</string>
    <string name="theory_test">Theory test</string>
    <string name="question">What is equal to</string>
    <string name="undefined_points">\? points</string>
    <string name="error_whe_getting_topic">The selected partition could not be retrieved</string>
    <string name="reset_progress">Reset progress</string>
    <string name="not_enough_points">Not enough points for this purchase</string>
    <string name="successful_purchase">Successful purchase!</string>
    <string name="add_points">Only for testing: add 1000 points</string>
    <string name="start">Start</string>
    <string name="draft">Draft</string>
    <string name="Undo">Undo</string>
    <string name="Clear">Clear</string>
    <string name="Stroke">Stroke</string>
    <string name="Drawing">Drawing</string>
    <string name="Moving">Moving</string>
    <string name="Zooming">Zooming</string>
    <string name="open_github">Project repository on Github</string>
    <string name="about_text">Created thanks to the Children\'s Education center IT–CUBE, 2023–2024 academic year.</string>
    <string name="answer_already_given">The answer has already been given</string>

    <string name="version">Version</string>
    <string name="by">by</string>

    <string-array name="rightAnswers">
        <item>The right answer!</item>
        <item>Great.</item>
        <item>Right!</item>
        <item>Wonderful.</item>
    </string-array>
    <string-array name="rightRewards">
        <item>You get</item>
        <item>Your reward:</item>
        <item>Added</item>
        <item>You receive</item>
    </string-array>

    <string-array name="points">
        <item>points</item>
        <item>point</item>
        <item>points</item>
    </string-array>
    <string name="rightAnswer">Right answer</string>

    <string name="youtuber">Open a file with tasks from the EGE</string>
    <string name="release">Download the latest version of app from Github</string>
</resources>