<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:autoSizeTextType="uniform"
    tools:targetApi="o">

    <TextView
        android:id="@+id/title"
        style="@style/Text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/settings"
        android:textSize="30sp"
        app:autoSizeTextType="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/points"
        style="@style/Buttons"
        android:layout_width="155dp"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <Button
        android:id="@+id/mainmenu"
        style="@style/Buttons"
        android:layout_width="170dp"
        android:layout_height="55dp"
        android:layout_marginBottom="8dp"
        android:text="@string/main_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fillViewport="true"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toTopOf="@id/mainmenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|fill_vertical"
            android:foregroundGravity="top|center"
            android:gravity="center"
            android:orientation="vertical"
            android:scrollbars="vertical">


            <Button
                android:id="@+id/reset_progress"
                style="@style/Buttons"
                android:layout_width="300dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:text="@string/reset_progress"
                android:textSize="16sp" />
            <Button
                android:id="@+id/add_points"
                style="@style/Buttons"
                android:layout_width="300dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:text="@string/add_points"
                android:textSize="16sp" />

        </LinearLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>