<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    tools:context=".MainActivity"
    app:autoSizeTextType="uniform"
    tools:targetApi="o">

    <Button
        android:id="@+id/theory"
        style="@style/AppTheme"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/dark_standard_icons"
        android:text="@string/theory"
        android:textColor="?android:attr/textColor"
        android:textColorHighlight="?android:attr/textColor"
        android:textColorHint="?android:attr/textColor"
        android:textColorLink="?android:attr/textColor"
        android:textSize="22sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@id/practice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/dark_inscriptions"
        app:strokeWidth="1.5dp" />

    <Button
        android:id="@+id/practice"
        style="@style/AppTheme"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/dark_standard_icons"
        android:text="@string/practice"
        android:textColor="?android:attr/textColor"
        android:textColorHighlight="?android:attr/textColor"
        android:textColorHint="?android:attr/textColor"
        android:textColorLink="?android:attr/textColor"
        android:textSize="22sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6"
        app:strokeColor="@color/dark_inscriptions"
        app:strokeWidth="1.5dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/settings"
        style="@style/AppTheme"
        android:layout_width="155dp"
        android:layout_height="55dp"
        android:layout_marginLeft="8dp"
        android:backgroundTint="@color/dark_info_icons"
        android:text="@string/settings"
        android:textColor="?android:attr/textColor"
        android:textColorHighlight="?android:attr/textColor"
        android:textColorHint="?android:attr/textColor"
        android:textColorLink="?android:attr/textColor"
        android:textSize="14sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="@id/upper"
        app:layout_constraintLeft_toLeftOf="@id/upper"
        app:strokeColor="@color/dark_standard_icons"
        app:strokeWidth="1.5dp" />

    <Button
        android:id="@+id/points"
        style="@style/AppTheme"
        android:layout_width="155dp"
        android:layout_height="55dp"
        android:layout_marginRight="8dp"
        android:backgroundTint="@color/dark_info_icons"
        android:text=""
        android:textColor="?android:attr/textColor"
        android:textColorHighlight="?android:attr/textColor"
        android:textColorHint="?android:attr/textColor"
        android:textColorLink="?android:attr/textColor"
        android:textSize="14sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="@id/upper"
        app:layout_constraintRight_toRightOf="@id/upper"
        app:strokeColor="@color/dark_standard_icons"
        app:strokeWidth="1.5dp" />

    <Button
        android:id="@+id/about"
        style="@style/AppTheme"
        android:layout_width="155dp"
        android:layout_height="55dp"
        android:layout_marginLeft="8dp"
        android:backgroundTint="@color/dark_info_icons"
        android:text="@string/about"
        android:textColor="?android:attr/textColor"
        android:textColorHighlight="?android:attr/textColor"
        android:textColorHint="?android:attr/textColor"
        android:textColorLink="?android:attr/textColor"
        android:textSize="14sp"
        app:cornerRadius="10dp"
        app:layout_constraintLeft_toLeftOf="@id/left"
        app:layout_constraintTop_toTopOf="@id/left"
        app:strokeColor="@color/dark_standard_icons"
        app:strokeWidth="1.5dp" />

    <Button
        android:id="@+id/exit"
        style="@style/AppTheme"
        android:layout_width="155dp"
        android:layout_height="55dp"
        android:layout_marginRight="8dp"
        android:backgroundTint="@color/dark_info_icons"
        android:text="@string/exit"
        android:textColor="?android:attr/textColor"
        android:textColorHighlight="?android:attr/textColor"
        android:textColorHint="?android:attr/textColor"
        android:textColorLink="?android:attr/textColor"
        android:textSize="14sp"
        app:cornerRadius="10dp"
        app:layout_constraintRight_toRightOf="@id/left"
        app:layout_constraintTop_toTopOf="@id/left"
        app:strokeColor="@color/dark_standard_icons"
        app:strokeWidth="1.5dp" />

    <TextView
        android:id="@+id/apptitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="#00FFFFFF"
        android:clickable="false"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="?android:attr/textColor"
        android:textIsSelectable="false"
        android:textScaleX="1"
        android:textSize="50sp"
        android:textStyle="bold"
        app:autoSizeMaxTextSize="50sp"
        app:autoSizeMinTextSize="20sp"
        app:autoSizeTextType="none"
        app:layout_constraintBottom_toTopOf="@id/points"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/shop"
        style="@style/AppTheme"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/dark_standard_icons"
        android:text="@string/shop"
        android:textColor="?android:attr/textColor"
        android:textColorHighlight="?android:attr/textColor"
        android:textColorHint="?android:attr/textColor"
        android:textColorLink="?android:attr/textColor"
        android:textSize="22sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/practice"
        app:strokeColor="@color/dark_inscriptions"
        app:strokeWidth="1.5dp" />

    <Space
        android:id="@+id/left"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shop" />

    <Space
        android:id="@+id/upper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/theory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>