<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    app:autoSizeTextType="uniform"
    tools:targetApi="o">

    <Space
        android:id="@+id/space"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/mainmenu"
        style="@style/Buttons"
        android:layout_width="170dp"
        android:layout_height="55dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:text="@string/main_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/space" />

    <TextView
        android:id="@+id/title"
        style="@style/Text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/practice"
        android:textSize="30sp"
        app:autoSizeTextType="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/next"
        style="@style/MainButtons"
        android:layout_width="170dp"
        android:layout_height="55dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="8dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/space" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fillViewport="true"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toTopOf="@id/mainmenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center|fill_vertical"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:foregroundGravity="top|center"
            android:gravity="center"
            android:orientation="vertical"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toBottomOf="@id/mainmenu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintVertical_bias="0.0">


            <TextView
                android:id="@+id/task"
                style="@style/Text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:scrollbars="vertical"
                app:circularflow_defaultRadius="10dp"
                app:circularflow_radiusInDP="10dp"
                tools:layout="@android:layout/list_content" />

            <ImageView
                android:id="@+id/image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:focusable="false"
                android:scaleType="fitStart"
                android:scaleX="1"
                android:scaleY="1"
                app:srcCompat="@drawable/task_8_1" />

            <EditText
                android:id="@+id/answer"
                style="@style/MainButtons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="text"
                tools:ignore="LabelFor" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/solution"
                style="@style/MainButtons"
                android:layout_width="170dp"
                android:layout_height="55dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/Solution"
                app:icon="@drawable/link"
                app:iconTint="@color/TextColor"
                app:iconGravity="textEnd"
                />
            <Button
                android:id="@+id/draftButton"
                style="@style/Buttons"
                android:layout_width="140dp"
                android:layout_height="50dp"
                android:text="@string/draft"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>