<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?android:attr/colorBackground"
    app:autoSizeTextType="uniform"
    tools:targetApi="o">

    <TextView
        android:id="@+id/title"
        style="@style/AppTheme"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="#00FFFFFF"
        android:gravity="center"
        android:text="@string/about"
        android:textColor="?android:attr/textColor"
        android:textColorHighlight="?android:attr/textColor"
        android:textColorHint="?android:attr/textColor"
        android:textColorLink="?android:attr/textColor"
        android:textSize="40sp"
        app:autoSizeTextType="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/about_text"
        style="@style/AppTheme"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:background="#00FFFFFF"
        android:gravity="bottom|center"
        android:text="@string/about_text"
        android:textColor="?android:attr/textColor"
        android:textColorHighlight="?android:attr/textColor"
        android:textColorHint="?android:attr/textColor"
        android:textColorLink="?android:attr/textColor"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/mainmenu"
        style="@style/AppTheme"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="-60dp"
        android:backgroundTint="@color/dark_info_icons"
        android:text="@string/back"
        android:textColor="?android:attr/textColor"
        android:textColorHighlight="?android:attr/textColor"
        android:textColorHint="?android:attr/textColor"
        android:textColorLink="?android:attr/textColor"
        android:textSize="16sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="@id/center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/dark_standard_icons"
        app:strokeWidth="1.5dp" />

    <Space
        android:id="@+id/center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6" />
</androidx.constraintlayout.widget.ConstraintLayout>